fixed scrolling, footer text on small screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -94,12 +94,8 @@ footer {
 
     ul {
         list-style: none;
-        padding-left: 0px;
+        padding-left: 0;
         font-size: 0;
-    }
-
-    li {
-        height: 22px;
     }
 }
 
@@ -108,8 +104,7 @@ footer {
 
     a {
         color: #545454;
-        line-height: 25px;
-        line-height: 2.5rem;
+        line-height: 22px;
         font-weight: 400;
         text-decoration: none;
     }
